# smart_tools

./: .gitignore  README.md  install.md  install.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
config/: dissector_config.yaml  download_list.csv
examples/: database.py  dissector.py  downloader.py  parquet_dissector.py  segmentation.py
scripts/: aggregator.py  comparator.py  dissector.py  fusioner.py  morpher.py  run_download.ps1  run_file_analyzer.ps1
smart_tools/: __init__.py
smart_tools/aggregator/: fileaggregator.py  main.py
smart_tools/aggregator/config/: aggregator_config.yaml
smart_tools/banking/: bic.py  iban.py  main.py  mtparty.py  regex_patterns.py
smart_tools/banking/config/: iban_config.yaml  swift.md  swift_regex.yaml  swift_regex_patterns.yaml
smart_tools/banking/swift/: mtparty.py  regex_patterns.py
smart_tools/common/: __init__.py  database.py  dataframe.py  downloader.py  schemator.py  smartsys.py  sql.py
smart_tools/comparator/: dfcomparator.py  filecomparator.py  main.py
smart_tools/datasets/: sanctions_list.json
smart_tools/dissector/: dfdissector.py  dirdissector.py  filedissector.py  main.py
smart_tools/dissector/config/: dissector_config.yaml
smart_tools/fusioner/: dffusioner.py  filefusioner.py  main.py
smart_tools/fusioner/config/: fusioner_config.toml
smart_tools/morpher/: csvmorpher.py  dirmorpher.py  filemorpher.py  main.py
smart_tools/morpher/config/: morpher_config.yaml
smart_tools/sklearn/: basics.md  segmentation.py
smart_tools/theydu/: README.MD  __init__.py  downloader.py  file_analyzer.py  file_tools.py  match_tools.py  name_matcher.py  transformer.py
smart_tools/theydu/theydu_config/: 20251007-FULL-1_0_config.json
smart_tools/utils/google/: gmail_refresh_token.py  gmail_sender.py  google_addressvalidation.py  google_drive.py  google_forms.py  google_maps.py  yt_as_audio.py
smart_tools/utils/serp/: serpapi_events.py
tests/: events.json  places.json  sample_email_config.json  test_google_forms.py  test_google_gmail.py  test_google_places.py  test_serpapi_events.py
