[metadata]
name = smart_tools
version = 0.9.8
author = Prabhuram Venkatesan
author_email = arcot23@gmail.com
description = A variety of smart tools to make analytics easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arcot23/smart_tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Homepage = https://pypi.org/project/smart-tools/
    Repository = https://github.com/arcot23/smart_tools
keywords = smart, tools, dissector, morpher, comparator, analysis, analyze, data

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    dissector = smart_tools.dissector.main:main
    morpher = smart_tools.morpher.main:main
    comparator = smart_tools.comparator.main:main

;[options.package_data]
;* = smart_tools/dissector/config/dissector_config.yaml, smart_tools/banking/config/iban_config.yaml

[options.data_files]
scripts/config = smart_tools/dissector/config/dissector_config.yaml, smart_tools/banking/config/iban_config.yaml